fix(docs): theme switching screen flickers

--- a/docs/src/styles/base.css
+++ b/docs/src/styles/base.css
@@ -20,14 +20,6 @@
     mix-blend-mode: normal;
   }
 
-  ::view-transition-old(root) {
-    z-index: 1;
-  }
-
-  ::view-transition-new(root) {
-    z-index: 2147483646;
-  }
-
   .dark-scheme {
     &::view-transition-old(root) {
       z-index: 2147483646;
